--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>zVintauge - Free Html5 Templates</title>
+	<title>zVintauge </title>
 	<meta name="description" content="Free Responsive Html5 Css3 Templates | zerotheme.com">
 	<meta name="author" content="https://www.zerotheme.com">
 	
@@ -57,35 +57,35 @@
 				<ul>
 					<li class="active"><a href="index.html"><span>Home</span></a></li>
 					</li>
-					<li class="has-sub"><a href="gallery.html"><span>Матрица судьбы</span></a>
+					<li class="has-sub"><a href="1arkan.html"><span>Матрица судьбы</span></a>
 						<ul>
 							<li class="has-sub"><a href="#"><span>1-11 аркан</span></a>
 								<ul>
-									<li><a href="#"><span>1-аркан</span></a></li>
+									<li><a href="1arkan.html"><span>1-аркан</span></a></li>
 									<li class="last"><a href="2arkan.html"><span>2-аркан</span></a></li>
-									<li class="last"><a href="#"><span>3-аркан</span></a></li>
-									<li class="last"><a href="#"><span>4-аркан</span></a></li>
-									<li class="last"><a href="#"><span>5-аркан</span></a></li>
-									<li class="last"><a href="#"><span>6-аркан</span></a></li>
-									<li class="last"><a href="#"><span>7-аркан</span></a></li>
-									<li class="last"><a href="#"><span>8-аркан</span></a></li>
-									<li class="last"><a href="#"><span>9-аркан</span></a></li>
-									<li class="last"><a href="#"><span>10-аркан</span></a></li>
-									<li><a href="#"><span>11-аркан</span></a></li>
+									<li class="last"><a href="3arkan.html"><span>3-аркан</span></a></li>
+									<li class="last"><a href="4arkan.html"><span>4-аркан</span></a></li>
+									<li class="last"><a href="5arkan.html"><span>5-аркан</span></a></li>
+									<li class="last"><a href="6arkan.html"><span>6-аркан</span></a></li>
+									<li class="last"><a href="7arkan.html"><span>7-аркан</span></a></li>
+									<li class="last"><a href="8arkan.html"><span>8-аркан</span></a></li>
+									<li class="last"><a href="9arkan.html"><span>9-аркан</span></a></li>
+									<li class="last"><a href="10arkan.html"><span>10-аркан</span></a></li>
+									<li><a href="11arkan.html"><span>11-аркан</span></a></li>
 								</ul>
 							</li>
 							<li class="has-sub"><a href="#"><span>12-22аркан</span></a>
 								<ul>
-									<li class="last"><a href="#"><span>12-аркан</span></a></li>
-									<li class="last"><a href="#"><span>13-аркан</span></a></li>
-									<li class="last"><a href="#"><span>14-аркан</span></a></li>
-									<li class="last"><a href="#"><span>15-аркан</span></a></li>
-									<li class="last"><a href="#"><span>16-аркан</span></a></li>
-									<li class="last"><a href="#"><span>17-аркан</span></a></li>
-									<li class="last"><a href="#"><span>18-аркан</span></a></li>
-									<li class="last"><a href="#"><span>19-аркан</span></a></li>
-									<li class="last"><a href="#"><span>20-аркан</span></a></li>
-									<li class="last"><a href="#"><span>21-аркан</span></a></li>
+									<li class="last"><a href="12arkan.html"><span>12-аркан</span></a></li>
+									<li class="last"><a href="13arkan.html"><span>13-аркан</span></a></li>
+									<li class="last"><a href="14arkan.html"><span>14-аркан</span></a></li>
+									<li class="last"><a href="15arkan.html"><span>15-аркан</span></a></li>
+									<li class="last"><a href="16arkan.html"><span>16-аркан</span></a></li>
+									<li class="last"><a href="17arkan.html"><span>17-аркан</span></a></li>
+									<li class="last"><a href="18arkan.html"><span>18-аркан</span></a></li>
+									<li class="last"><a href="19arkan.html"><span>19-аркан</span></a></li>
+									<li class="last"><a href="20arkan.html"><span>20-аркан</span></a></li>
+									<li class="last"><a href="21arkan.html"><span>21-аркан</span></a></li>
 									<li class="last"><a href="durak.html"><span>22-аркан</span></a></li>
 
 								</ul>
@@ -96,31 +96,30 @@
 						<ul>
 							<li class="has-sub"><a href="#"><span>Знак зодиака</span></a>
 								<ul>
-									<li><a href="#"><span>Овен</span></a></li>
-									<li class="last"><a href="#"><span>Телец</span></a></li>
-									<li class="last"><a href="#"><span>Близнецы</span></a></li>
-									<li class="last"><a href="#"><span>Рак</span></a></li>
-									<li class="last"><a href="#"><span>Лев</span></a></li>
-									<li class="last"><a href="#"><span>Дева</span></a></li>
-									<li class="last"><a href="#"><span>Весы</span></a></li>
-									<li class="last"><a href="#"><span>Скорпион</span></a></li>
-									<li class="last"><a href="#"><span>Стрелец</span></a></li>
-									<li class="last"><a href="#"><span>Козерог</span></a></li>
-									<li class="last"><a href="#"><span>Водолей</span></a></li>
-									<li class="last"><a href="#"><span>Рыбы</span></a></li>
+									<li><a href="aries.html"><span>Овен</span></a></li>
+									<li class="last"><a href="taurus.html"><span>Телец</span></a></li>
+									<li class="last"><a href="gemini.html"><span>Близнецы</span></a></li>
+									<li class="last"><a href="cancer.html"><span>Рак</span></a></li>
+									<li class="last"><a href="leo.html"><span>Лев</span></a></li>
+									<li class="last"><a href="virgo.html"><span>Дева</span></a></li>
+									<li class="last"><a href="libra.html"><span>Весы</span></a></li>
+									<li class="last"><a href="scoprio.html"><span>Скорпион</span></a></li>
+									<li class="last"><a href="sagittarius.html"><span>Стрелец</span></a></li>
+									<li class="last"><a href="capricorn.html"><span>Козерог</span></a></li>
+									<li class="last"><a href="aquarius.html"><span>Водолей</span></a></li>
+									<li class="last"><a href="pisces.html"><span>Рыбы</span></a></li>
 
 								</ul>
 							</li>
 							<li class="has-sub"><a href="#"><span>Натальная карта</span></a>
 								<ul>
-									<li><a href="#"><span>Луна</span></a></li>
-									<li class="last"><a href="#"><span>Солнце</span></a></li>
-									<li class="last"><a href="#"><span>Асцендент</span></a></li>
+									<li><a href="moon.html"><span>Луна</span></a></li>
+									<li class="last"><a href="sun.html"><span>Солнце</span></a></li>
+									<li class="last"><a href="ascendant.html"><span>Асцендент</span></a></li>
 								</ul>
 							</li>
 						</ul>
 					</li>
-					<li><a href=""><span>Психология</span></a></li>
 					<li class="last"><a href="contact.html"><span>Связаться с тарологом</span></a></li>
 				</ul>
 			</div>
@@ -191,9 +190,9 @@
 									</div>
 									<div class="col-1-2">
 										<div class="entry-content t-center">
-											<h3>The title on the article</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra convallis auctor. Sed accumsan libero quis mi commodo et suscipit enim lacinia. Morbi rutrum vulputate est sed faucibus.consectetur adipiscing elit. Aliquam viverra convallis auctor. Sed accumsan libero quis mi commodo et suscipit enim lacinia.</p>
-											<a class="button" href="single.html">Read More</a>
+											<h3>Знаки зодиака</h3>
+											<p>Знаки зодиака — это равные сектора небесной сферы с вершинами в полюсах эклиптики, опирающиеся на отрезки в 1/12 эклиптического круга. Началом зодиакального круга и первого знака зодиака считается точка весеннего равноденствия, далее знаки следуют по ходу годового движения Солнца.</p>
+											<a class="button" href="gallery.html">Read More</a>
 										</div>
 									</div>
 								</article>
@@ -205,9 +204,11 @@
 									</div>
 									<div class="col-1-2">
 										<div class="entry-content t-center">
-											<h3>The title on the article</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra convallis auctor. Sed accumsan libero quis mi commodo et suscipit enim lacinia. Morbi rutrum vulputate est sed faucibus.consectetur adipiscing elit. Aliquam viverra convallis auctor. Sed accumsan libero quis mi commodo et suscipit enim lacinia.</p>
-											<a class="button" href="single.html">Read More</a>
+											<h3>Как расчитать свой аркан?</h3>
+											<p>Переходите по ссылке введи дату рождения, цифра в центре схемы это ваш аркан
+											Узнать информацию можете на нашем сайте
+											</p>
+											<a class="button" href="https://matritsa-sudbi.ru/#section-calculation">Read More</a>
 										</div>
 									</div>
 								</article>
@@ -221,7 +222,7 @@
 										<div class="entry-content t-center">
 											<h3>The title on the article</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra convallis auctor. Sed accumsan libero quis mi commodo et suscipit enim lacinia. Morbi rutrum vulputate est sed faucibus.consectetur adipiscing elit. Aliquam viverra convallis auctor. Sed accumsan libero quis mi commodo et suscipit enim lacinia.</p>
-											<a class="button" href="single.html">Read More</a>
+											<a class="button" href="aries.html">Read More</a>
 										</div>
 									</div>
 								</article>
